grammar.js
    source_file: ($) => repeat(choice($._item, $.implicit_run_end)),

    _item: ($) =>
      choice(
        $.handler_definition,
        $.script_block,
        $.tell_block,
        $.tell_simple_statement,
        $.if_block,
        $.if_simple_statement,
        $.repeat_block,
        $.try_block,
        $.considering_block,
        $.ignoring_block,
        $.timeout_block,
        $.transaction_block,
        $.using_terms_block,
        $.use_statement,
        $.property_declaration,
        $.global_declaration,
        $.local_declaration,
        $.set_statement,
        $.copy_statement,
        $.return_statement,
        $.error_statement,
        $.exit_statement,
        $.continue_statement,
        $.log_statement,
        $.bare_objc_call,
        $.command_call,
        $._expression
      ),

    // Bare ObjC selector call at statement level: `sortList:myList`,
    // `splitString:s byDelim:d`. Distinct from `objc_selector_call` (which
    // requires a `receiver's` prefix) so this form doesn't compete with
    // record-entry syntax inside `{}`. Only valid as a top-level item.
    handler_definition: ($) =>
      prec.right(
        choice(
          // Regular and Folder-Action shapes. Parameters can be:
          //   • a parenthesized list: `(a, b)`
          //   • a bare identifier (Folder-Action style): `on open theItems`
          //   • a list pattern: `on run {}`, `on open {a, b}` for droplets
          // The terminator can be the bare `end` keyword, optionally followed
          // by the handler name; or the single-token `end run` form for the
          // run handler specifically. The handler name may be either a plain
          // identifier or a command-name token (`on open …`, `on quit …`).
          seq(
            field("keyword", $.keyword_function),
            field("name", choice($.identifier, $.folder_action_event, $.command_name)),
            optional(choice($.parameter_list, $.identifier, $.list)),
            repeat($.folder_action_param),
            optional($.given_clause),
            repeat($._item),
            choice(
              seq($.keyword_end, optional(choice($.identifier, $.folder_action_event, $.command_name))),
              $.implicit_run_end
            )
          ),
          // ObjC-style selector handler: each selector word is followed by
          // `:identifier`. The end clause repeats the selector words with
          // trailing colons but no parameters.
          $.objc_handler_definition
        )
      ),


    keyword_on: ($) => token(ci("on")),
    keyword_function: ($) => choice($.keyword_on, $.keyword_handler_to),

    keyword_end: ($) => token(ci("end")),

    // Forced move: once `piped_identifier` reaches `$._expression`, the
    // header `on greet(name, age)` becomes GLR-ambiguous — `(name, age)`
    // could also parse as a `parenthesized_expression` (or comma-separated
    // expression list) since `name` and `age` are valid expressions. The
    // dynamic precedence resolves in favour of `parameter_list` whenever
    // the surrounding context is a handler header.
    parameter_list: ($) =>
      prec.dynamic(
        10,
        prec(
          2,
          seq(
            "(",
            optional(seq($._name_ref, repeat(seq(",", $._name_ref)))),
            ")"
          )
        )
      ),

    // Labeled parameters: given name:paramName, age:paramAge
    given_clause: ($) =>
      seq(
        token(ci("given")),
        $.labeled_parameter,
        repeat(seq(",", $.labeled_parameter))
      ),

    labeled_parameter: ($) =>
      seq(
        field("label", $.identifier),
        ":",
        field("name", $._name_ref)
      ),

    // ==================== SCRIPT OBJECTS ====================

    // Script block: script [name] ... end script
    script_block: ($) =>
      prec.right(
        1,
        seq(
          field("keyword", $.keyword_script),
          optional(field("name", $.identifier)),
          optional($.parent_clause),
          repeat($._item),
          $.keyword_end,
          optional(token(ci("script")))
        )
      ),

    keyword_script: ($) => token(ci("script")),

    // Parent inheritance: script MyScript parent MyParent
    tell_block: ($) =>
      prec.right(
        seq(
          field("keyword", $.keyword_tell),
          field("target", $._expression),
          repeat($._item),
          $.keyword_end,
          optional(token(ci("tell")))
        )
      ),

    // One-line tell: tell application "Finder" to activate
    tell_simple_statement: ($) =>
      prec.right(
        10,
        seq(
          field("keyword", $.keyword_tell),
          field("target", $.reference),
          $.keyword_to,
          field("action", choice(
            $.command_call,
            $.set_statement,
            $.return_statement,
            $._expression
          ))
        )
      ),

    keyword_to: ($) => token(ci("to")),

    keyword_tell: ($) => token(ci("tell")),

    // ==================== IF BLOCK ====================

    // If block: if condition then ... [else if ... then ...] [else ...] end [if]
    // Uses `prec.dynamic` so that when both `if_block` and `if_simple_statement`
    // can match the same prefix, the parser actively prefers the multi-line
    // form whenever it sees a matching `end if` ahead.
    if_block: ($) =>
      prec.dynamic(
        2,
        prec.right(
          3,
          seq(
            field("keyword", $.keyword_if),
            field("condition", $._expression),
            $.keyword_then,
            repeat($._item),
            repeat($.else_if_clause),
            optional($.else_clause),
            $.keyword_end,
            optional(token(ci("if")))
          )
        )
      ),

    // One-line if: `if x then return y`. Allows a small set of items as the
    // single tail action — deliberately restricted so a multi-line if-block
    // body (which often starts with `set_statement` / `command_call`) doesn't
    // accidentally match here and orphan the `end if`. The trade-off is that
    // a true one-liner like `if x then set y to 5` or `if x then say "hi"`
    // parses as an `if_block` with a missing `end if`. Confirmed: adding
    // `set_statement`/`command_call`/`copy_statement` here causes ~14 files
    // in the realworld corpus to regress (multi-line `if … then\ncommand\n…
    // end if` blocks commit to the one-line form before the parser reaches
    // `end if`, even with `prec.dynamic` on `if_block`). One-liners using
    // command-call tails should be quarantined or rewritten in tests.
    if_simple_statement: ($) =>
      prec.right(
        1,
        seq(
          field("keyword", $.keyword_if),
          field("condition", $._expression),
          $.keyword_then,
          field("then_action", choice(
            $.return_statement,
            $.exit_statement,
            $.continue_statement,
            $.error_statement,
            $.log_statement
          ))
        )
      ),

    keyword_if: ($) => token(ci("if")),
    keyword_then: ($) => token(ci("then")),

    else_if_clause: ($) =>
      seq(
        $.keyword_else_if,
        field("condition", $._expression),
        $.keyword_then,
        repeat($._item)
      ),

    keyword_else_if: ($) => token(seq(ci("else"), /[ \t]+/, ci("if"))),

    else_clause: ($) => seq($.keyword_else, repeat($._item)),

    keyword_else: ($) => token(ci("else")),

    // ==================== REPEAT BLOCK ====================

    // Repeat block: repeat ... end repeat
    repeat_block: ($) =>
      prec.right(
        seq(
          field("keyword", $.keyword_repeat),
          optional($._repeat_clause),
          repeat($._item),
          $.keyword_end,
          optional(token(ci("repeat")))
        )
      ),

    keyword_repeat: ($) => token(ci("repeat")),

    _repeat_clause: ($) =>
      choice(
        seq(
          token(ci("with")),
          $.identifier,
          token(ci("from")),
          $._expression,
          token(ci("to")),
          $._expression,
          optional(seq(token(ci("by")), $._expression))
        ),
        seq(token(ci("with")), $.identifier, token(ci("in")), $._expression),
        seq(token(ci("while")), $._expression),
        seq(token(ci("until")), $._expression),
        seq($._expression, token(ci("times")))
      ),

    // ==================== TRY BLOCK ====================

    // Try block: try ... on error [errMsg] [number errNum] ... end try
    try_block: ($) =>
      prec.right(
        seq(
          field("keyword", $.keyword_try),
          repeat($._item),
          optional($.error_handler),
          $.keyword_end,
          optional(token(ci("try")))
        )
      ),

    keyword_try: ($) => token(ci("try")),

    error_handler: ($) =>
      prec.right(
        1,
        seq(
          $.keyword_on_error,
          optional($.error_parameters),
          repeat($._item)
        )
      ),

    keyword_on_error: ($) => token(seq(ci("on"), /[ \t]+/, ci("error"))),

    // ==================== CONSIDERING/IGNORING BLOCKS ====================

    // Considering block: `considering A, B [but ignoring C, D] ... end considering`
    considering_block: ($) =>
      prec.right(
        seq(
          field("keyword", $.keyword_considering),
          $.text_attribute,
          repeat(seq(token(choice(",", ci("and"))), $.text_attribute)),
          optional($.but_ignoring_clause),
          repeat($._item),
          $.keyword_end,
          optional(token(ci("considering")))
        )
      ),

    keyword_considering: ($) => token(ci("considering")),

    // Ignoring block: `ignoring A, B [but considering C, D] ... end ignoring`
    text_attribute: ($) =>
      token(
        choice(
          ci("case"),
          ci("diacriticals"),
          ci("hyphens"),
          ci("punctuation"),
          ci("white space"),
          seq(ci("numeric"), /[ \t]+/, ci("strings")),
          ci("expansion"),
          seq(ci("application"), /[ \t]+/, ci("responses"))
        )
      ),

    // ==================== TIMEOUT BLOCK ====================

    // With timeout block: with timeout [of] N seconds ... end timeout
    timeout_block: ($) =>
      prec.right(
        seq(
          field("keyword", $.keyword_with_timeout),
          optional(token(ci("of"))),
          $._expression,
          token(ci("seconds")),
          repeat($._item),
          $.keyword_end,
          optional(token(ci("timeout")))
        )
      ),

    keyword_with_timeout: ($) => token(seq(ci("with"), /[ \t]+/, ci("timeout"))),

    // ==================== TRANSACTION BLOCK ====================

    // With transaction block: `with transaction [<session>] ... end transaction`
    // Bundles Apple events into a single atomic operation for apps that
    // support transactional updates (rare; used in database-style scripting).
    property_declaration: ($) =>
      seq(
        $.keyword_property,
        field("name", $._name_ref),
        ":",
        field("value", $._expression)
      ),

    // Accepts the full word `property` or the short form `prop`, both of
    // which the AppleScript compiler treats as identical.
    keyword_property: ($) => token(choice(ci("property"), ci("prop"))),

    // Global declaration
    global_declaration: ($) =>
      seq(
        $.keyword_global,
        $._name_ref,
        repeat(seq(",", $._name_ref))
      ),

    keyword_global: ($) => token(ci("global")),

    // Local declaration
    local_declaration: ($) =>
      seq(
        $.keyword_local,
        $._name_ref,
        repeat(seq(",", $._name_ref))
      ),

    keyword_local: ($) => token(ci("local")),

    // ==================== STATEMENTS ====================

    // Set statement
    // `set <target> to <value>`. Target can be a multi-word property name
    // (`folder actions enabled`, `current view`). Value may be either an
    // expression or a command call (`set MyPath to path to me`).
    set_statement: ($) =>
      seq(
        $.keyword_set,
        field("variable", choice($._expression, $.compound_name)),
        token(ci("to")),
        field("value", choice($._expression, $.command_call))
      ),

    keyword_set: ($) => token(ci("set")),

    // Copy statement
    copy_statement: ($) =>
      seq(
        $.keyword_copy,
        field("value", $._expression),
        token(ci("to")),
        field("variable", $._expression)
      ),

    keyword_copy: ($) => token(ci("copy")),

    // Return statement
    return_statement: ($) =>
      prec.right(
        seq(
          $.keyword_return,
          optional($._expression)
        )
      ),

    keyword_return: ($) => token(ci("return")),

    // Error statement: error "message" number N
    error_statement: ($) =>
      prec.right(
        seq(
          $.keyword_error,
          optional($._expression),
          optional(seq(token(ci("number")), $._expression)),
          optional(seq(token(ci("from")), $._expression)),
          optional(seq(token(ci("to")), $._expression)),
          optional(seq(token(ci("partial")), token(ci("result")), $._expression))
        )
      ),

    keyword_error: ($) => token(ci("error")),

    // Exit statement
    continue_statement: ($) =>
      prec.right(seq($.keyword_continue, optional($.command_call))),

    keyword_continue: ($) => token(ci("continue")),

    // Log statement
    log_statement: ($) =>
      seq(
        $.keyword_log,
        $._expression
      ),

    keyword_log: ($) => token(ci("log")),

    // ==================== COMMAND CALLS ====================

    // Common AppleScript commands. Argument can be either an expression or
    // a multi-word `compound_name` so `path to home folder` and similar
    // app-dictionary references parse without spilling tokens.
    command_call: ($) =>
      prec.right(
        seq(
          field("command", $.command_name),
          optional(field("argument", choice($._expression, $.compound_name))),
          repeat(choice($.command_parameter, $.command_flag))
        )
      ),

    // Boolean flag parameter — `with multiple selections allowed`,
    // `without invisibles`, `with hidden answer`. No value expression; the
    // flag itself is the entire parameter. Listed before `command_parameter`
    // in `command_call`'s repeat so the longest-match lexer favours it.
    command_parameter: ($) =>
      seq(
        field("name", $.parameter_name),
        field("value", choice($._expression, $.compound_name, $.command_call))
      ),

    list: ($) =>
      seq(
        "{",
        optional(seq($._list_item, repeat(seq(",", $._list_item)))),
        "}"
      ),

    _list_item: ($) => choice($._expression, $.compound_name),

    record: ($) => seq("{", $.record_entry, repeat(seq(",", $.record_entry)), "}"),

    // Record entry. Key may be multi-word (`file name: x`, `disclosure
    // triangle: y`) since AppleScript app dictionaries use such keys freely.
    record_entry: ($) => seq($.compound_name, ":", $._expression),

    reference: ($) =>
      seq(
        $.keyword_application,
        $.string
      ),

    keyword_application: ($) => token(ci("application")),

    // ==================== BINARY EXPRESSIONS ====================

    // Binary operators with precedence
    logical_operator: ($) =>
      token(choice(ci("and"), ci("or"))),

    additive_operator: ($) => token(choice("+", "-")),

    multiplicative_operator: ($) =>
      token(choice("*", "/", "÷", ci("mod"), ci("div"))),

    // Unary operators
    unary_expression: ($) =>
      prec.right(6, seq($.unary_operator, $._expression)),

    unary_operator: ($) => token(choice(ci("not"), "-")),

    // String concatenation
    index_expression: ($) =>
      prec.left(
        4,
        seq(
          $.element_type,
          $._expression,
          optional(seq(token(ci("of")), $._expression))
        )
      ),

    me_reference: ($) => token(ci("me")),
