test/corpus/binary_expressions.txt
================================================================================
Addition
================================================================================

1 + 2

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (number)
    (additive_operator)
    (number)))

================================================================================
Subtraction
================================================================================

5 - 3

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (number)
    (additive_operator)
    (number)))

================================================================================
Multiplication
================================================================================

4 * 5

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (number)
    (multiplicative_operator)
    (number)))

================================================================================
Division
================================================================================

10 / 2

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (number)
    (multiplicative_operator)
    (number)))

================================================================================
Comparison equals
================================================================================

x = 5

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (comparison_operator)
    (number)))

================================================================================
Logical and
================================================================================

x and y

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (logical_operator)
    (identifier)))

================================================================================
Logical or
================================================================================

a or b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (logical_operator)
    (identifier)))

================================================================================
Unary not
================================================================================

not true

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    (unary_operator)
    (boolean)))

================================================================================
String concatenation
================================================================================

"Hello " & name

--------------------------------------------------------------------------------

(source_file
  (concatenation
    (string)
    (identifier)))
