test/corpus/coercion.txt
================================================================================
Coercion to text
================================================================================

x as text

--------------------------------------------------------------------------------

(source_file
  (coercion_expression
    (identifier)
    (type_specifier)))

================================================================================
Coercion to integer
================================================================================

y as integer

--------------------------------------------------------------------------------

(source_file
  (coercion_expression
    (identifier)
    (type_specifier)))

================================================================================
Coercion to list
================================================================================

z as list

--------------------------------------------------------------------------------

(source_file
  (coercion_expression
    (identifier)
    (type_specifier)))

================================================================================
Coercion in set statement
================================================================================

set x to y as text

--------------------------------------------------------------------------------

(source_file
  (set_statement
    (keyword_set)
    variable: (identifier)
    value: (coercion_expression
      (identifier)
      (type_specifier))))

================================================================================
POSIX file coercion
================================================================================

x as POSIX file

--------------------------------------------------------------------------------

(source_file
  (coercion_expression
    (identifier)
    (type_specifier)))
