test/corpus/commands.txt
================================================================================
Display dialog command
================================================================================

display dialog "Hello World"

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)
    argument: (string)))

================================================================================
Display dialog with buttons
================================================================================

display dialog "Are you sure?" buttons {"OK", "Cancel"}

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)
    argument: (string)
    (command_parameter
      name: (parameter_name)
      value: (list
        (string)
        (string)))))

================================================================================
Display dialog with default button
================================================================================

display dialog "Hello" default button "OK"

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)
    argument: (string)
    (command_parameter
      name: (parameter_name)
      value: (string))))

================================================================================
Do shell script command
================================================================================

do shell script "ls -la"

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)
    argument: (string)))

================================================================================
Delay command
================================================================================

delay 2

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)
    argument: (number)))

================================================================================
Beep command
================================================================================

beep

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)))

================================================================================
Say command with text
================================================================================

say "Hello there"

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)
    argument: (string)))

================================================================================
Activate command
================================================================================

activate

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)))

================================================================================
Display notification command
================================================================================

display notification "Task complete" with title "Done"

--------------------------------------------------------------------------------

(source_file
  (command_call
    command: (command_name)
    argument: (string)
    (command_parameter
      name: (parameter_name)
      value: (string))))
