test/corpus/comments.txt
================================================================================
Line comment
================================================================================

-- This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Block comment
================================================================================

(* single line block *)

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
Shebang comment
================================================================================

#!/usr/bin/osascript

--------------------------------------------------------------------------------

(source_file
  (comment))
