test/corpus/error_statement.txt
================================================================================
Simple error statement
================================================================================

error "Something went wrong"

--------------------------------------------------------------------------------

(source_file
  (error_statement
    (keyword_error)
    (string)))

================================================================================
Error with number
================================================================================

error "File not found" number 404

--------------------------------------------------------------------------------

(source_file
  (error_statement
    (keyword_error)
    (string)
    (number)))

================================================================================
Error without message
================================================================================

error

--------------------------------------------------------------------------------

(source_file
  (error_statement
    (keyword_error)))
