test/corpus/literals.txt
================================================================================
String literal
================================================================================

"Hello World"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
String with escape sequences
================================================================================

"Line 1\nLine 2\tTabbed\"Quoted\\"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
Number integer
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Number decimal
================================================================================

3.14159

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Boolean true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (boolean))

================================================================================
Boolean false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (boolean))

================================================================================
Missing value
================================================================================

missing value

--------------------------------------------------------------------------------

(source_file
  (missing_value))

================================================================================
Empty list
================================================================================

{}

--------------------------------------------------------------------------------

(source_file
  (list))

================================================================================
List with items
================================================================================

{1, 2, 3}

--------------------------------------------------------------------------------

(source_file
  (list
    (number)
    (number)
    (number)))

================================================================================
Record
================================================================================

{name:"John", age:30}

--------------------------------------------------------------------------------

(source_file
  (record
    (record_entry
      (compound_name
        (identifier))
      (string))
    (record_entry
      (compound_name
        (identifier))
      (number))))
