test/corpus/log_statement.txt
================================================================================
Log statement with string
================================================================================

log "Debug message"

--------------------------------------------------------------------------------

(source_file
  (log_statement
    (keyword_log)
    (string)))

================================================================================
Log statement with variable
================================================================================

log myVar

--------------------------------------------------------------------------------

(source_file
  (log_statement
    (keyword_log)
    (identifier)))
