test/corpus/object_specifiers.txt
================================================================================
Simple index expression
================================================================================

window 1

--------------------------------------------------------------------------------

(source_file
  (index_expression
    (element_type)
    (number)))

================================================================================
Paragraph index
================================================================================

paragraph 3

--------------------------------------------------------------------------------

(source_file
  (index_expression
    (element_type)
    (number)))

================================================================================
Property of reference
================================================================================

name of theFile

--------------------------------------------------------------------------------

(source_file
  (property_reference
    (compound_name
      (identifier))
    (identifier)))

================================================================================
Item at index
================================================================================

item 1

--------------------------------------------------------------------------------

(source_file
  (index_expression
    (element_type)
    (number)))

================================================================================
Range expression
================================================================================

item 1 thru 5

--------------------------------------------------------------------------------

(source_file
  (range_expression
    (element_type)
    (number)
    (range_operator)
    (number)))
