test/corpus/special_refs.txt
================================================================================
Current application reference
================================================================================

current application

--------------------------------------------------------------------------------

(source_file
  (current_application))

================================================================================
Me reference
================================================================================

me

--------------------------------------------------------------------------------

(source_file
  (me_reference))

================================================================================
It reference
================================================================================

it

--------------------------------------------------------------------------------

(source_file
  (it_reference))

================================================================================
Result reference
================================================================================

result
